  * don't install tests for notebook and qtconsole
  * bump standard to 3.9.4, no changes required
  * add autopkgtests
  * Added-missing-quotes.patch: fix missing quotes
  * linenoless-traceback.patch:
    fix crash on tracebacks without line numbers (Closes: #701597)
  * add tkinter package to debianize-error-messages.patch (Closes: #701707)

 -- Julian Taylor <jtaylor.debian@googlemail.com>  Sat, 02 Feb 2013 11:14:27 +0100

ipython (0.13.1-2) unstable; urgency=low

  * update watch file to use github directly
    thanks to Bart Martens for the file
  * ipython-doc: break/replace ipython << 0.11-2 (Closes: #694280)

 -- Julian Taylor <jtaylor.debian@googlemail.com>  Sun, 25 Nov 2012 11:55:50 +0000

ipython (0.13.1-1) unstable; urgency=low

  * New upstream bugfix release
  * refresh patches, drop applied except-shadows-builtin-fix.patch
  * depend on libjs-jquery >= 1.7 (Closes: #685986)
  * drop build depends on dh-linktree and libjs-jquery-ui (Closes: #685985)
    - needs to be added again when we can use the packaged jquery-ui
  * drop LC_ALL=C.UTF-8 from build and install, not required anymore
  * override dh_python[23] to work around #683108
  * build depend on libc-bin (>= 2.13-1~) for C.UTF-8 locale used in tests

 -- Julian Taylor <jtaylor.debian@googlemail.com>  Sun, 21 Oct 2012 10:37:05 +0200

ipython (0.13-1) unstable; urgency=low

  * New upstream release
    No repackging necessary anymore, js sources available in external
    minified variants are not installed
  * refresh patches, drop upstream applied full-qt-imports 
  * add except-shadows-builtin-fix.patch
  * drop libjs-jquery-ui dependency, use the embedded development branch
  * don't compress the examples
  * remove executable permissions on embedded codemirror files
  * build with LC_ALL=C.UTF-8 to avoid a unicode issue in setupbase.py
  * remove generated doc images in clean
  * update copyright with new and removed files
  * remove unreachable Stephan Peijnik from uploaders