@@ -44,3 +44,15 @@ Depends: ipython3, ipython3-notebook, ipython-doc, ipython3-qtconsole,
          python3-zmq,
          xauth,
          xvfb
+
+Tests: cython-magic2
+Depends: ipython, cython, python-dev, python-pexpect
+
+Tests: cython-magic3
+Depends: ipython3, cython3, python3-dev, python-pexpect
+
+Tests: tools2
+Depends: ipython
+
+Tests: tools3
+Depends: ipython3
