@@ -1,0 +1,5 @@
+#!/bin/sh
+set -efu
+export HOME=$ADTTMP
+
+python $PWD/debian/tests/interactive.py ipython3
