@@ -1,0 +1,5 @@
+#!/bin/sh
+set -efu
+
+export HOME=$ADTTMP
+$1 profile create 2>&1
